--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/montserrat": "^5.2.8",
     "@reduxjs/toolkit": "^2.11.2",
+    "@supabase/supabase-js": "^2.97.0",
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,6 +24,7 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.1",
     "tailwind-merge": "^3.4.1",
     "tailwindcss": "^4.1.18"
   },
